# seraph

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/seraph/: __init__.py  config.py  logging_setup.py
src/seraph/cli/: app.py
src/seraph/core/: baseline.py  bridge.py  differ.py  engine.py  mutator.py  paths.py  reporter.py  security.py  static.py  store.py
src/seraph/mcp/: formatters.py  server.py
src/seraph/models/: __init__.py  assessment.py  enums.py
src/verdict/: __init__.py  config.py  logging_setup.py
src/verdict/cli/: app.py
src/verdict/core/: baseline.py  bridge.py  differ.py  engine.py  mutator.py  reporter.py  static.py  store.py
src/verdict/mcp/: formatters.py  server.py
src/verdict/models/: __init__.py  assessment.py  enums.py
tests/: conftest.py  test_config.py  test_integration.py
tests/cli/: test_cli.py
tests/core/: test_baseline.py  test_bridge.py  test_differ.py  test_engine.py  test_mutator.py  test_reporter.py  test_security.py  test_static.py  test_store.py
tests/mcp/: test_server.py
